--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./app.js"
   },
   "repository": {
     "type": "git",
@@ -17,8 +18,12 @@
   },
   "homepage": "https://github.com/claraprice/tmwsd_challenge#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "node": "^17.1.0",
-    "pug": "^3.0.2"
+    "pg": "^8.9.0",
+    "pug": "^3.0.2",
+    "sequelize": "^6.28.0",
+    "sequelize-cli": "^6.6.0"
   }
 }
